# vanguox

./: .gitignore  README.md  auth-schema.ts  bun.lockb  env.txt  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
apps/backend/: README.md  package-lock.json  package.json  tsconfig.json
apps/backend/src/: api.types.ts  server.ts
apps/frontend/: package.json
apps/frontend/src/: middleware.ts
backend/: .env  Cargo.toml
backend/src/: main.rs
backend/src/db/: index.rs
backend/src/handlers/: post_handlers.rs  user_handlers.rs
backend/src/models/: post_models.rs  user_models.rs
backend/src/routes/: users.rs
frontend/: package.json
frontend/dashboard/: bun.lockb
frontend/emporium/: bun.lockb  package.json
frontent/emporium/: bun.lockb
frontent/test/: bun.lockb  package.json
prisma/: schema.prisma
prisma/migrations/20250704145627_product_schema_1/: migration.sql
prisma/migrations/20250705021823_messages_chats/: migration.sql
scripts/: create-vanguox-app.sh
src/: auth.ts  middleware.ts  prompt.ts
src/app/: client-greeting.tsx  globals.css  layout.tsx  page.tsx
src/components/: calendar-13.tsx  create-product-dialog.tsx  create-store-dialog.tsx  dock.tsx  footer.tsx  full-screen-loader.tsx  modals.tsx  navbar.tsx  product-card.tsx  sidebar-button.tsx
src/constants/: index.ts
src/db/: index.ts  schema.ts
src/helpers/: get-subdomain.ts
src/hooks/: use-store-name.ts
src/lib/: auth-client.ts  auth-utils.ts  auth.ts  db.ts  email.ts  functions.ts  utils.ts
src/trpc/: client.tsx  init.ts  server.tsx
(+128 files in other folders)
